--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-spring.application.name=FeedbackBot
+# PostgreSQL
+db.url=jdbc:postgresql://localhost:5432/feedbackdb
+db.username=postgres
+db.password=postgres
+
+# Telegram
+telegram.bot.token=???_?????
+telegram.bot.username=FeedbackBot
+
+# OpenAI
+openai.api.key=???_OPENAI_KEY
+
+# Google Docs
+google.credentials.file=credentials.json
+google.document.id=???_GOOGLE_DOC_ID
+
