--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/maven-v4_0_0.xsd">
+                             http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.feedbackbot</groupId>
+    <groupId>com.example.feedbackbot</groupId>
     <artifactId>FeedbackBot</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <java.version>17</java.version>
+        <spring-boot.version>3.3.0</spring-boot.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>google-api-services</id>
+            <url>https://maven.google.com/</url>
+        </repository>
+    </repositories>
+
+    <!-- Dependency Management для Google Docs API -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.google.apis</groupId>
+                <artifactId>google-api-services-docs</artifactId>
+                <version>v1-rev20230120-1.32.1</version>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <!-- Telegram Bot API -->
@@ -60,6 +80,13 @@
             <version>5.2.1</version>
         </dependency>
 
+        <!-- OpenAI API -->
+        <dependency>
+            <groupId>com.theokanning.openai-gpt3-java</groupId>
+            <artifactId>client</artifactId>
+            <version>0.10.0</version>
+        </dependency>
+
         <!-- Google API Client -->
         <dependency>
             <groupId>com.google.api-client</groupId>
@@ -74,20 +101,47 @@
             <version>1.23.0</version>
         </dependency>
 
-        <!-- Google Docs API -->
-<!--        <dependency>-->
-<!--            <groupId>com.google.apis</groupId>-->
-<!--            <artifactId>google-api-services-docs</artifactId>-->
-<!--            <version>v1-rev20230120-2.0.0</version>-->
-<!--        </dependency>-->
-
-
-        <!-- OpenAI API -->
+        <!-- Google HTTP Client Jackson2 -->
         <dependency>
-            <groupId>com.theokanning.openai-gpt3-java</groupId>
-            <artifactId>client</artifactId>
-            <version>0.10.0</version>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson2</artifactId>
+            <version>1.45.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-docs -->
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-docs</artifactId>
+            <version>v1-rev61-1.25.0</version>
+        </dependency>
+
+        <!-- Spring Boot Starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>3.3.0</version>
         </dependency>
     </dependencies>
-</project>
 
+    <build>
+        <plugins>
+            <!-- Для Lombok и Java 17 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.30</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
