--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,14 @@ db.username=postgres
 db.password=postgres
 
 # Telegram
-telegram.bot.token=???_?????
-telegram.bot.username=FeedbackBot
+telegram.bot.token=8148238420:AAF0qhpT-03eW2NKxQ9wqcbRPINVx_xUOiY
+telegram.bot.username=AutoServiceFeedbackBot
 
 # OpenAI
 openai.api.key=???_OPENAI_KEY
 
 # Google Docs
-google.credentials.file=credentials.json
-google.document.id=???_GOOGLE_DOC_ID
+google.credentials.file=src/main/resources/credentials/credentials.json
+google.document.id=1ri0hQwtsZK2mI78hS_i3VTGm4w3RW0IF5oRYCTPLp7s
+
 
