--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,5 @@
-# PostgreSQL
-db.url=jdbc:postgresql://localhost:5432/feedbackdb
-db.username=postgres
-db.password=postgres
+# ??????????? ???????? ????? ?? ????? ?????????
+spring.config.import=optional:classpath:credentials/secrets.properties
 
-# Telegram
-telegram.bot.token=8148238420:AAF0qhpT-03eW2NKxQ9wqcbRPINVx_xUOiY
-telegram.bot.username=AutoServiceFeedbackBot
-
-# OpenAI
-openai.api.key=???_OPENAI_KEY
-
-# Google Docs
-google.credentials.file=src/main/resources/credentials/credentials.json
+# Google Docs ? ????????? ?????
 google.document.id=1ri0hQwtsZK2mI78hS_i3VTGm4w3RW0IF5oRYCTPLp7s
-
-
