--- a/pom.xml
+++ b/pom.xml
@@ -12,26 +12,14 @@
         <spring-boot.version>3.3.0</spring-boot.version>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>google-api-services</id>
-            <url>https://maven.google.com/</url>
-        </repository>
-    </repositories>
-
-    <!-- Dependency Management для Google Docs API -->
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.google.apis</groupId>
-                <artifactId>google-api-services-docs</artifactId>
-                <version>v1-rev20230120-1.32.1</version>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
+        <!-- Spring Boot Starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+
         <!-- Telegram Bot API -->
         <dependency>
             <groupId>org.telegram</groupId>
@@ -87,14 +75,14 @@
             <version>0.10.0</version>
         </dependency>
 
-        <!-- Google API Client -->
+        <!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client -->
         <dependency>
             <groupId>com.google.api-client</groupId>
             <artifactId>google-api-client</artifactId>
-            <version>2.2.0</version>
+            <version>2.8.1</version>
         </dependency>
 
-        <!-- Google OAuth (для авторизации через credentials.json) -->
+        <!-- Google OAuth -->
         <dependency>
             <groupId>com.google.auth</groupId>
             <artifactId>google-auth-library-oauth2-http</artifactId>
@@ -108,31 +96,40 @@
             <version>1.45.0</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-docs -->
+        <!-- Google Docs API -->
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-docs</artifactId>
-            <version>v1-rev61-1.25.0</version>
+            <version>v1-rev20230227-2.0.0</version>
         </dependency>
 
-        <!-- Spring Boot Starter -->
+        <!-- JUnit 5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Spring Boot Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <version>3.3.0</version>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Для Lombok и Java 17 -->
+            <!-- Компиляция Java 17 + Lombok -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
